create nexa-api and refactor for plugin needs