@@ -1,7 +1,4 @@
 package nexa.framework.runtime.domain.scripting.internal.nexa;
-import nexa.framework.runtime.domain.scripting.internal.nexa.NexaRuntimeExtension;
-import nexa.framework.runtime.domain.scripting.internal.nexa.NexaRuntime;
-import nexa.framework.runtime.domain.scripting.internal.nexa.NexaHostObject;
 
 import java.util.Map;
 
@@ -17,14 +14,13 @@ public final class TestNexaRuntimeExtension implements NexaRuntimeExtension {
         @Override
         public Object member(String name, int line, int column) {
             return switch (name) {
-                case "upper" -> (NexaRuntime.NexaCallable) (runtime, arguments, callLine, callColumn) ->
-                        String.valueOf(arguments.getFirst()).toUpperCase();
-                case "sum" -> (NexaRuntime.NexaCallable) (runtime, arguments, callLine, callColumn) ->
-                        ((Number) arguments.get(0)).doubleValue() + ((Number) arguments.get(1)).doubleValue();
+                case "upper" -> (NexaRuntime.NexaCallable) (runtime, arguments, callLine, callColumn) -> String
+                        .valueOf(arguments.getFirst()).toUpperCase();
+                case "sum" -> (NexaRuntime.NexaCallable) (runtime, arguments, callLine,
+                        callColumn) -> ((Number) arguments.get(0)).doubleValue()
+                                + ((Number) arguments.get(1)).doubleValue();
                 default -> throw new NexaScriptException("Member plugin tidak dikenal: " + name, line, column);
             };
         }
     }
 }
-
-
